--- a/package.json
+++ b/package.json
@@ -10,10 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
     "bootstrap": "^5.3.7",
+    "file-saver": "^2.0.5",
+    "framer-motion": "^12.23.6",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.3"
+    "react-onesignal": "^3.2.3",
+    "react-router-dom": "^7.6.3",
+    "react-toastify": "^11.0.5",
+    "recharts": "^3.1.0",
+    "socket.io-client": "^4.8.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
